Update quest guide

--- a/frontend/guidequest.html
+++ b/frontend/guidequest.html
@@ -39,7 +39,7 @@
             <h3>4. Download and install the downloaded apk</h3>
             After pressing the download button and doing what it says follow <a href="https://sidequestvr.com/setup-howto">this guide</a> to install SideQuest.
             <br>
-            After installing Sidequest and setting it up drag and drop the file you downloaded from the download button above into SideQuest to install the apk.
+            After installing Sidequest and setting it up, uninstall the game (9 squares on the top right of sidequest, click the cog on the game and press uninstall app) and afterwards drag and drop the file you downloaded from the download button above into SideQuest to install the apk.
             <br>
             <br>
             <b>Congrats. You now downgraded your game</b>
