change oculus.com to /experiences/quest, add current database update progress

--- a/frontend/home.html
+++ b/frontend/home.html
@@ -25,7 +25,7 @@
                 <br>
                 All data is being gathered from Oculus GraphQL api at <a href="https://graphql.oculus.com/graphql">https://graphql.oculus.com/graphql</a>.
                 <h3>Download info</h3>
-                <b>Downloads</b> may <b>only work</b> if you are <b>logged in on <a href="https://oculus.com">https://oculus.com</a></b> with your Oculus Account which owns the game you want to download.
+                <b>Downloads</b> may <b>only work</b> if you are <b>logged in on <a href="{oculusloginlink}">{oculusloginlink}</a></b> with your Oculus Account which owns the game you want to download.
                 <h3>Project info</h3>
                 OculusDB is always in development. You can check the ToDo list <a href="https://github.com/ComputerElite/OculusDB/projects/1">here</a>.
                 <br>
