--- a/frontend/server.html
+++ b/frontend/server.html
@@ -70,6 +70,8 @@
                     <tr><td class="label">Start of current Database update</td><td class="value">${new Date(res.currentUpdateStart).toLocaleString()}</td></tr>
                     <tr><td class="label">Data entries</td><td class="value">${res.dataDocuments}</td></tr>
                     <tr><td class="label">Activity entries</td><td class="value">${res.activityDocuments}</td></tr>
+                    <tr><td class="label">Apps recognized by OculusDB</td><td class="value">${res.appsToScrape}</td></tr>
+                    <tr><td class="label">Current database update scraped apps (may not be accurate)</td><td class="value">${res.scrapedApps}</td></tr>
                 </table>`
             }))
 
