Redo downgrading guide

--- a/frontend/guide.html
+++ b/frontend/guide.html
@@ -10,12 +10,10 @@
     <body>
         <div class="content">
             <h2>Downgrading guide</h2>
-            Click on what game you want to downgrade:
+            <b class="big">Which headset do you use?</b>
             <br>
-            <a href="/guide/rift">- Downgrade Rift, Rift S, Link and Air Link games</a>
-            <br>
-            <br>
-            <a href="/guide/quest">- Downgrade Quest, Quest 2, GearVR and Go games</a>
+            <input class="big" type="button" onclick="location = `/guide/quest`" value="Quest">
+            <input class="big" type="button" onclick="location = `/guide/rift`" value="Rift/Oculus Link">
 
         </div>
         <script src="/script.js"></script>
