Change guide to detect sq beta

--- a/frontend/guidequest_SQQ.html
+++ b/frontend/guidequest_SQQ.html
@@ -11,9 +11,11 @@
         <div class="content">
             <h2>Downgrading games</h2>
             
-            <h3>Do you have a PC with Sidequest?</h3>
-            <input class="big" type="button" onclick="location = `/guide/quest/sqq`" value="yes">
-            <input class="big" type="button" onclick="location = `/guide/quest/qavs`" value="no">
+            <h3>Does your SideQuest look like this?</h3>
+            <img src="/assets/sq.png">
+            <br>
+            <input class="big" type="button" onclick="location = `/guide/quest/qavs`" value="yes">
+            <input class="big" type="button" onclick="location = `/guide/quest/pc`" value="no">
         </div>
         <script src="/script.js"></script>
     </body>
