--- a/frontend/blocked.html
+++ b/frontend/blocked.html
@@ -19,7 +19,7 @@
                 <br>
                 <br>
                 <h2>When will OculusDB be up again?</h2>
-                At this point in time I do not know. I'll try to open OculusDB as soon as possible. This could be in a few minutes, hours or more than a day.
+                I reported the bug to oculus and told them that I'll open OculusDB either when they fix the issue or on July 7th 3pm GMT.
             </div>
         </div>
         <script>
