--- a/frontend/guidequest_QAVS.html
+++ b/frontend/guidequest_QAVS.html
@@ -14,7 +14,7 @@
             <h3>1. Install Sidequest</h3>
             Follow <a href="https://sidequestvr.com/setup-howto">this guide</a> install SideQuest to your vr headset.
 
-            <h3>2. Install QuestAppVersionSwitcher</h3>
+            <h3 id="t">2. Install QuestAppVersionSwitcher</h3>
             After settings up SideQuest search for <code>QuestAppVersionSwitcher</code> and install it to your headset.
 
             <h3>3. Set up QuestAppVersionSwitcher</h3>
@@ -27,20 +27,29 @@
             Search for the game you want to downgrade and press the Download button on a version you want.
             The download should start and you'll see the progress of the download in the <code>Download progress</code> tab.
 
-            <h4>5. Install the Downgraded game</h4>
-            <h5>5.1 Select the right app</h5>
+            <h3>5. (Optional) Back up your app data (saves, scores, settings, ...)</h3>
+            If you want to back up your scores head to the <code>Backup</code> tab in QuestAppVersionSwitcher and select your app by pressing the <code>Change app</code> button (if you are unsure what to select, <a onclick="HighlightElement('games')">search the game below step 6.1</a>).
+            <br>
+            At the bottom type in a backup name (e. g. <code>my_backup</code>), check <code>Only backup app data</code> and press the <code>Create Backup</code> button.
+            <br>
+            You can then restore the app data by selecting it in the list above and pressing restore
+
+            <h4>6. Install the Downgraded game</h4>
+            <h5>6.1 Select the right app</h5>
             <b>After</b> the download finished, go to the <code>Backups</code> tab in QuestAppVersionSwitcher and press the <code>Change app</code> button at the top to select the app you downgraded.
             <br>
             <b>Unsure what to select? Type the games name into this box and hit the Show me the name button</b>
             <br>
-            <input type="text" placeholder="Game name" id="game">
-            <input type="button" value="Show me the name" onclick="SearchGame()">
-            <div class="textbox" id="text"></div>
+            <div id="games">
+                <input type="text" placeholder="Game name" id="game">
+                <input type="button" value="Show me the name" onclick="SearchGame()">
+                <div class="textbox" id="text"></div>
+            </div>
             <div id="res"></div>
-            <h5>5.2 Install the game</h5>
+            <h5>6.2 Install the game</h5>
             From the list of backups select the version you just downloaded. Click the <code>Restore button</code> and follow the provided steps.
 
-            <h4>6. Have fun</h4>
+            <h4>7. Have fun</h4>
             You can now play the downgraded game. If you need help join the <a href="{BSLGDC}">Beat Saber Legacy Group Discord Server</a> and ask for help there.
             
         </div>
