Update downgrade guide

--- a/frontend/guidequest_QAVS.html
+++ b/frontend/guidequest_QAVS.html
@@ -21,6 +21,12 @@
             In order to downgrade games you have to log in to your Facebook account on QuestAppVersionSwitcher.
             To do that open the <code>Tools & Options</code> tab in QuestAppVersionSwitcher and press the Login button.
             Log in to your Facebook account like you would normally.
+            <br>
+            <br>
+            <b>Stuck in a login loop?</b>
+            <br>
+            Open QuestAppVersionSwitcher on your PC, Laptop or phone by opening the link shown at the bottom of the <code>Tools & Options</code> tab on your PC, Laptop or phone.
+            Follow <a href="https://computerelite.github.io/tools/Oculus/ObtainToken.html">this guide</a> to copy your token and past it into the <code>Token</code> box in the <code>Tools & Options</code> tab and hit <code>Login with token</code>.
             
             <h3>4. Download the downgraded game</h3>
             After you logged in go to the <code>Downgrade</code> tab in QuestAppVersionSwitcher.
