--- a/frontend/guidequest_PC.html
+++ b/frontend/guidequest_PC.html
@@ -44,7 +44,7 @@
             <br>
             <br>
             <div id="sq"></div>
-            If you need help join the <a href="{BSLGDC}">Beat Saber Legacy Group Discord Server</a> and ask for help there.
+            If you need help join the <a href="{OculusDBDC}">OculusDB Discord server</a> and ask for help there.
         </div>
         <script src="/script.js"></script>
         <script>
