and the qavs guide as well

--- a/frontend/guidequest_QAVS.html
+++ b/frontend/guidequest_QAVS.html
@@ -56,7 +56,7 @@
             From the list of backups select the version you just downloaded. Click the <code>Restore button</code> and follow the provided steps.
 
             <h4>7. Have fun</h4>
-            You can now play the downgraded game. If you need help join the <a href="{BSLGDC}">Beat Saber Legacy Group Discord Server</a> and ask for help there.
+            You can now play the downgraded game. If you need help join the <a href="{OculusDBDC}">OculusDB Discord server</a> and ask for help there.
             
         </div>
         <script src="/script.js"></script>
