And the rift guide as well

--- a/frontend/guiderift.html
+++ b/frontend/guiderift.html
@@ -23,7 +23,7 @@
             <br>
             <b>Congrats. You now downgraded your game</b>
             <br>
-            If you need help join the <a href="{BSLGDC}">Beat Saber Legacy Group Discord Server</a> and ask for help there.
+            If you need help join the <a href="{OculusDBDC}">OculusDB Discord server</a> and ask for help there.
         </div>
         <script src="/script.js"></script>
         <script>
