add ruis paypal

--- a/frontend/supportus.html
+++ b/frontend/supportus.html
@@ -14,7 +14,7 @@
                 <p>A lot goes into developing OculusDB. You can help in many ways to improve OculusDB and other tools I (<a target="_blank" href="https://computerelite.github.io/">ComputerElite</a>) make. But without the generous soul of <a target="_blank" href="https://github.com/FranciscoRibeiro03">rui2015</a>, who is hosting this Website for me for free, something at this scale would not have been possible.</p>
                 <p>You can help in following ways:</p>
                 <ul>
-                    <li>Cover the server cost by <a target="_blank" href="https://patreon.com/rui2015">subscribing to ruis patreon</a>, <a target="_blank" href="https://patreon.com/rui2015">donating him directly via PayPal</a> or making a one time donation <a target="_blank" href="https://ko-fi.com/rui2015">to his ko-fi account</a></li>
+                    <li>Cover the server cost by <a target="_blank" href="https://patreon.com/rui2015">subscribing to ruis patreon</a> or making a one time donation <a target="_blank" href="https://ko-fi.com/rui2015">to his ko-fi account</a></li>
                     <li>Help with development by reporting bugs and suggesting features in <a target="_blank" href="{OculusDBDC}">the official OculusDB Discord server</a></li>
                 </ul>
                 <p>There is currently no way to support ComputerElite directly but that may come in future</p>
