--- a/frontend/5xx.html
+++ b/frontend/5xx.html
@@ -92,11 +92,16 @@
                 OculusDB is unavailable right now. We'll try to get it operational as fast as possible. This usually takes less than half an hour. We're sorry for the inconvenience.
                 <h2>What can I do?</h2>
                 Join the <a href="https://discord.gg/zwRfHQN2UY">OculusDB Discord server</a> and report the problem in the <code>#report-bugs</code> channel there.
+                <h2 onclick="GoBack()">Click here to try and go back to OculusDB</h2>
             </div>
         </div>
         <script>
             const params = new URLSearchParams(window.location.search);
             document.getElementById("errorCode").innerText = params.get("code");
+
+            function GoBack() {
+                window.history.back();
+            }
         </script>
     </body>
 </html>
