Hide Betas by default, update supportus page

--- a/frontend/id.html
+++ b/frontend/id.html
@@ -225,15 +225,20 @@
             }
 
             function UpdateVersions(showAll) {
-                var vers = `<label class="checkmarkContainer">Show all versions<input type='checkbox' onclick='UpdateVersions(${!showAll})'${showAll ? " checked" : ""}><span class="checkmark"></span></label>`
+                var showAll = document.getElementById("showallcheckbox") ? document.getElementById("showallcheckbox").checked : false
+                var showBetas = document.getElementById("showbetascheckbox") ? document.getElementById("showbetascheckbox").checked : false
+                var vers = `
+                <label class="checkmarkContainer">Show all versions<input type='checkbox' id="showallcheckbox" onclick='UpdateVersions()' ${showAll ? " checked" : ""}><span class="checkmark"></span></label>
+                <label class="checkmarkContainer">Show Betas<input type='checkbox' id="showbetascheckbox" onclick='UpdateVersions()' ${showBetas ? " checked" : ""}><span class="checkmark"></span></label>`
                 var hmd = -1
+                
                 connected.versions.forEach(v => {
                     hmd = v.parentApplication.hmd
                     v.downloads = GetDownloads(v.id)
                     if(downloadVersion && downloadVersion == v.version) {
                         DownloadVersionPopUp(v.version)
                     }
-                    if(v.binary_release_channels.nodes.length > 0 || showAll)
+                    if((v.binary_release_channels.nodes.length > 0 && (showBetas || v.binary_release_channels.nodes[0].channel_name == "LIVE")) || showAll)
                         vers += FormatVersion(v, v.id)
                 })
                 if(hmd != -1) {
