--- a/frontend/5xx.html
+++ b/frontend/5xx.html
@@ -100,7 +100,7 @@
             document.getElementById("errorCode").innerText = params.get("code");
 
             function GoBack() {
-                window.history.back();
+                location = params.get("origin");
             }
         </script>
     </body>
