Add android stuff

--- a/frontend/guidequest_QAVS.html
+++ b/frontend/guidequest_QAVS.html
@@ -12,7 +12,7 @@
             <h2>Downgrading games</h2>
             
             <h3>1. Install Sidequest</h3>
-            Follow <a href="https://sidequestvr.com/setup-howto">this guide</a> install SideQuest to your vr headset.
+            Follow <a href="https://sidequestvr.com/setup-howto">this guide</a> install SideQuest to your vr headset or get SideQuest from the PlayStore if you are on your android phone.
 
             <h3 id="t">2. Install QuestAppVersionSwitcher</h3>
             After settings up SideQuest search for <code>QuestAppVersionSwitcher</code> and install it to your headset.
