--- a/frontend/guidequest.html
+++ b/frontend/guidequest.html
@@ -11,7 +11,7 @@
         <div class="content">
             <h2>Downgrading games</h2>
             
-            <h3>Do you have a PC with Sidequest?</h3>
+            <h3>Do you have a PC with Sidequest (press no if you want to mod on android)?</h3>
             <input class="big" type="button" onclick="location = `/guide/quest/sqq`" value="yes">
             <input class="big" type="button" onclick="location = `/guide/quest/qavs`" value="no">
         </div>
