fix exception when displayShortDescription is null when formatting dlcs

--- a/frontend/guidequest_QAVS.html
+++ b/frontend/guidequest_QAVS.html
@@ -12,10 +12,10 @@
             <h2>Downgrading games</h2>
             
             <h3>1. Install Sidequest</h3>
-            Follow <a href="https://sidequestvr.com/setup-howto">this guide</a> install SideQuest to your vr headset or get SideQuest from the PlayStore if you are on your android phone.
+            Follow <a href="https://sidequestvr.com/setup-howto">this guide</a> install SideQuest to your vr headset or get SideQuest from the PlayStore if you are on an android phone.
 
             <h3 id="t">2. Install QuestAppVersionSwitcher</h3>
-            After settings up SideQuest search for <code>QuestAppVersionSwitcher</code> and install it to your headset.
+            After setting up SideQuest search for <code>QuestAppVersionSwitcher</code> and install it to your headset.
 
             <h3>3. Set up QuestAppVersionSwitcher</h3>
             In order to downgrade games you have to log in to your Facebook account on QuestAppVersionSwitcher.
