Add client side caching, fix gorilla tag not appearing on easy downgrade guide

--- a/frontend/guidequest_PC.html
+++ b/frontend/guidequest_PC.html
@@ -15,8 +15,8 @@
             <div class="navBarElement">
                 <input type="text" placeholder="Game name" id="game">
                 <select id="headset">
-                    <option value="HOLLYWOOD">Quest</option>
-                    <option value="RIFT">Rift/Oculus Link</option>
+                    <option value="HOLLYWOOD,MONTEREY">Quest</option>
+                    <option value="RIFT,LAGUNA">Rift/Oculus Link</option>
                     <option value="GEARVR">GearVR</option>
                     <option value="PACIFIC">Go</option>
                 </select>
