improve OculusDB overall

--- a/frontend/5xx.html
+++ b/frontend/5xx.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta name="theme-color" content="#63fac3">
-        <meta property="og:site_name" content="OculusDB"><meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="site_name" content="OculusDB"><meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Server error - OculusDB</title>
-        <meta property="og:title" content="Server Error - OculusDB">
-        <meta property="og:description" content="An unknown error has occurred">
+        <meta name="title" content="Server Error - OculusDB">
+        <meta name="description" content="An unknown error has occurred">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700,700italic" rel="stylesheet" type="text/css">
         <style>
             html {
@@ -79,7 +79,7 @@
     <body>
         <div class="navBar">
             <div class="navBarInnerLeft websitename" style="cursor: pointer;">
-                <img src="https://computerelite.github.io/assets/CE_512px.png" style="height: 100%;">
+                <img alt="ComputerElite icon. Wooden background featuring a windows logo, oculus logo and a piano" src="https://computerelite.github.io/assets/CE_512px.png" style="height: 100%;">
                 <div class="title">
                     OculusDB
                 </div>
