--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         {meta}
         <link rel="stylesheet" href="/style.css">
@@ -9,8 +9,8 @@
             }
         </style>
         <title>Admin panel - OculusDB</title>
-        <meta property="og:title" content="Admin panel - OculusDB">
-        <meta property="og:description" content="Why can you see this">
+        <meta name="title" content="Admin panel - OculusDB">
+        <meta name="description" content="Why can you see this">
     </head>
     <body>
         <div class="content">
