--- a/frontend/api.html
+++ b/frontend/api.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         {meta}
         <link rel="stylesheet" href="/style.css">
         <title>Api docs - OculusDB</title>
-        <meta property="og:title" content="Api docs - OculusDB">
-        <meta property="og:description" content="Api documentation of OculusDB">
+        <meta name="title" content="Api docs - OculusDB">
+        <meta name="description" content="Api documentation of OculusDB">
         <style>
             .json-container {
                 border: var(--brightHighlightColor) 1px solid;
