--- a/frontend/console.html
+++ b/frontend/console.html
@@ -1,12 +1,12 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         {meta}
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
         <link href='/style.css' rel='stylesheet' type='text/css'>
         <title>Live console - OculusDB</title>
-        <meta property="og:title" content="Live console - OculusDB">
-        <meta property="og:description" content="Why can you see this">
+        <meta name="title" content="Live console - OculusDB">
+        <meta name="description" content="Why can you see this">
         
     </head>
     <body>
