--- a/frontend/explore.html
+++ b/frontend/explore.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         {meta}
         <link rel="stylesheet" href="/style.css" >
         <title>Explore - OculusDB</title>
-        <meta property="og:title" content="Explore - OculusDB">
-        <meta property="og:description" content="Explore OculusDB">
+        <meta name="title" content="Explore - OculusDB">
+        <meta name="description" content="Explore OculusDB">
     </head>
     <body>
         <div class="content">
