--- a/frontend/home.html
+++ b/frontend/home.html
@@ -1,11 +1,11 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         {meta}
         <link rel="stylesheet" href="/style.css" >
         <title>Home - OculusDB</title>
-        <meta property="og:title" content="Home - OculusDB">
-        <meta property="og:description" content="Get info of any app on oculus and monitor it">
+        <meta name="title" content="Home - OculusDB">
+        <meta name="description" content="Get info of any app on oculus and monitor it">
         <meta name="google-site-verification" content="0UWk3BxSZQEsUvTS6W6NuN71Zcv9XDiBPUXGO_0llJM" />
     </head>
     <body>
