--- a/frontend/privacy.html
+++ b/frontend/privacy.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         {meta}
         <link rel="stylesheet" href="/style.css" >
         <title>Privacy Policy - OculusDB</title>
-        <meta property="og:title" content="Privacy Policy - OculusDB">
-        <meta property="og:description" content="Tells you what data is being collected by OculusDB">
+        <meta name="title" content="Privacy Policy - OculusDB">
+        <meta name="description" content="Tells you what data is being collected by OculusDB">
     </head>
     <body>
         <div class="content">
