--- a/frontend/recentactivity.html
+++ b/frontend/recentactivity.html
@@ -1,11 +1,11 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     {meta}
     <link rel="stylesheet" href="/style.css">
     <title>Recent activity - OculusDB</title>
-    <meta property="og:title" content="Recent activity - OculusDB">
-    <meta property="og:description" content="Recent activity such as price changes, new applications, new versions and new dlcs of Oculus">
+    <meta name="title" content="Recent activity - OculusDB">
+    <meta name="description" content="Recent activity such as price changes, new applications, new versions and new dlcs of Oculus">
 </head>
 <body>
     <div class="content">
