--- a/frontend/supportus.html
+++ b/frontend/supportus.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         {meta}
         <link rel="stylesheet" href="/style.css" >
         <title>Support us - OculusDB</title>
-        <meta property="og:title" content="Support us - OculusDB">
-        <meta property="og:description" content="Find out how to help with development of OculusDB and many more tools">
+        <meta name="title" content="Support us - OculusDB">
+        <meta name="description" content="Find out how to help with development of OculusDB and many more tools">
     </head>
     <body>
         <div class="content">
