--- a/frontend/blocked.html
+++ b/frontend/blocked.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         {meta}
         <link rel="stylesheet" href="/style.css" >
         <title>Important Info - OculusDB</title>
-        <meta property="og:title" content="Important Info - OculusDB">
-        <meta property="og:description" content="A important info is currently on OculusDB">
+        <meta name="title" content="Important Info - OculusDB">
+        <meta name="description" content="A important info is currently on OculusDB">
         <meta name="google-site-verification" content="0UWk3BxSZQEsUvTS6W6NuN71Zcv9XDiBPUXGO_0llJM" />
     </head>
     <body>
