--- a/frontend/guidequest_QAVS.html
+++ b/frontend/guidequest_QAVS.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         {meta}
         <link rel="stylesheet" href="/style.css" >
         <title>Downgrade guide Quest - OculusDB</title>
-        <meta property="og:title" content="Downgrade guide Quest - OculusDB">
-        <meta property="og:description" content="A guide to downgrade your quest games with a pc">
+        <meta name="title" content="Downgrade guide Quest - OculusDB">
+        <meta name="description" content="A guide to downgrade your quest games with a pc">
     </head>
     <body>
         <div class="content">
