--- a/frontend/guidequest_SQQ.html
+++ b/frontend/guidequest_SQQ.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         {meta}
         <link rel="stylesheet" href="/style.css" >
         <title>Downgrade guide Quest - OculusDB</title>
-        <meta property="og:title" content="Downgrade guide Quest - OculusDB">
-        <meta property="og:description" content="A guide to downgrade your quest games with a pc">
+        <meta name="title" content="Downgrade guide Quest - OculusDB">
+        <meta name="description" content="A guide to downgrade your quest games with a pc">
     </head>
     <body>
         <div class="content">
             <h2>Downgrading games</h2>
             
             <h3>Does your SideQuest look like this?</h3>
-            <img src="/assets/sq.png">
+            <img alt="Screenshot of the SideQuest Easy Installer" src="/assets/sq.png">
             <br>
             <input class="big" type="button" onclick="location = `/guide/quest/qavs`" value="yes">
             <input class="big" type="button" onclick="location = `/guide/quest/pc`" value="no">
