--- a/frontend/id.html
+++ b/frontend/id.html
@@ -1,11 +1,11 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         {meta}
         <link rel="stylesheet" href="/style.css" >
         <title>Information - OculusDB</title>
-        <meta property="og:title" content="Information - OculusDB">
-        <meta property="og:description" content="Shows information about an version, app or dlc">
+        <meta name="title" content="Information - OculusDB">
+        <meta name="description" content="Shows information about an version, app or dlc">
     </head>
     <body>
         <div class="content">
