--- a/frontend/login.html
+++ b/frontend/login.html
@@ -1,11 +1,11 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         {meta}
         <link rel="stylesheet" href="/style.css" >
         <title>Login - OculusDB</title>
-        <meta property="og:title" content="Login - OculusDB">
-        <meta property="og:description" content="Login to your OculusDB account">
+        <meta name="title" content="Login - OculusDB">
+        <meta name="description" content="Login to your OculusDB account">
     </head>
     <body>
         <div class="content">
