--- a/frontend/search.html
+++ b/frontend/search.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         {meta}
         <link rel="stylesheet" href="/style.css" >
         <title>Search - OculusDB</title>
-        <meta property="og:title" content="Search - OculusDB">
-        <meta property="og:description" content="Search OculusDB">
+        <meta name="title" content="Search - OculusDB">
+        <meta name="description" content="Search OculusDB">
     </head>
     <body>
         <div class="content">
