--- a/frontend/server.html
+++ b/frontend/server.html
@@ -1,11 +1,11 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         {meta}
         <link rel="stylesheet" href="/style.css" >
         <title>Server - OculusDB</title>
-        <meta property="og:title" content="Server - OculusDB">
-        <meta property="og:description" content="Various information about OculusDB and its server">
+        <meta name="title" content="Server - OculusDB">
+        <meta name="description" content="Various information about OculusDB and its server">
     </head>
     <body>
         <div class="content">
